# QHarness

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_msvc.bat  run_tests.bat  说明.txt
.claude/skills/create-tool/: SKILL.md
app/: CMakeLists.txt  ChatDock.cpp  ChatDock.h  EngineThread.cpp  EngineThread.h  LogDock.cpp  LogDock.h  MainWindow.cpp  MainWindow.h  QPostMessage.cpp  QPostMessage.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
core/: CMakeLists.txt  empty.cpp  qh_export.h
core/config/: SettingsStore.cpp  SettingsStore.h
core/context/: Composer.cpp  Composer.h
core/engine/: Engine.h  Engine2StageReAct.cpp  Engine2StageReAct.h  EngineReActLoop.cpp  EngineReActLoop.h
core/interaction/: Interaction.h  InteractionFeishu.cpp  InteractionFeishu.h
core/memory/: Memory.h  MemoryFile.cpp  MemoryFile.h
core/provider/: CancellationToken.cpp  CancellationToken.h  MockProvider.cpp  MockProvider.h  MockTwoStageProvider.cpp  MockTwoStageProvider.h  Provider.h  ProviderClaude.cpp  ProviderClaude.h  ProviderHttp.cpp  ProviderHttp.h  ProviderOpenAI.cpp  ProviderOpenAI.h
core/robot/: Robot.h  RobotFeishu.cpp  RobotFeishu.h
core/schema/: CancellationToken.cpp  CancellationToken.h  Message.cpp  Message.h  PostMessage.cpp  PostMessage.h  Role.cpp  Role.h  Settings.cpp  Settings.h  ToolCall.cpp  ToolCall.h  ToolDefinition.cpp  ToolDefinition.h  ToolResult.cpp  ToolResult.h
core/tests/: MockHttpServer.h  TestHarness.h  TestMain.cpp  skeleton_compile_check.cpp  test_CancellationToken.cpp  test_ContentCodec.cpp  test_EditFileTool.cpp  test_Engine2StageReAct.cpp  test_EngineReActLoop.cpp  test_Message.cpp  test_MockBashTool.cpp  test_MockProvider.cpp  test_MockTwoStageProvider.cpp  test_PostMessage.cpp  test_ProviderClaude.cpp  test_ProviderHttp.cpp  test_ProviderOpenAI.cpp  test_ReadFileTool.cpp  test_Role.cpp  test_Settings.cpp  test_TestRunner.cpp  test_ToolCall.cpp  test_ToolDefinition.cpp  test_ToolManager.cpp  test_ToolResult.cpp  test_WinBashTool.cpp  test_WriteFileTool.cpp
core/tool/: BashTool.h  ContentCodec.h  EditFileTool.cpp  EditFileTool.h  LinuxBashTool.cpp  LinuxBashTool.h  MacBashTool.cpp  MacBashTool.h  MockBashTool.cpp  MockBashTool.h  PathCodec.h  ReadFileTool.cpp  ReadFileTool.h  Tool.cpp  Tool.h  ToolManager.cpp  ToolManager.h  ToolRegistry.h  WinBashTool.cpp  WinBashTool.h  WriteFileTool.cpp  WriteFileTool.h
docs/plans/: 2026-06-22-QHarnesscc框架与schema实现计划.md  2026-06-23-LogDockChatDock抽类实现计划.md  2026-06-23-core动态链接库与实现分离计划.md  2026-06-23-工具管理器ToolManager实现计划.md  2026-06-24-EngineThread异步引擎线程-实现计划.md  2026-06-24-MockProvider与generate接口改造-实现计划.md  2026-06-24-PostMessage抽象与QPostMessage实现-实现计划.md  2026-06-25-Engine2StageReAct双阶段引擎实现计划.md  2026-06-26-LLM配置供应商多模型重构计划.md  2026-06-26-设置系统实现计划.md  2026-07-01-工具分发Fork-Join重构实现计划.md
docs/specs/: 2026-06-22-QHarnesscc框架与schema设计.md  2026-06-23-LogDockChatDock抽类设计.md  2026-06-23-core动态链接库与实现分离设计.md  2026-06-23-工具管理器ToolManager设计.md  2026-06-24-EngineThread异步引擎线程-design.md  2026-06-24-MockProvider与generate接口改造-design.md  2026-06-24-PostMessage抽象与QPostMessage实现-design.md  2026-06-25-Engine2StageReAct双阶段引擎设计.md  2026-06-25-PostMessage新增Chat与Think级别设计.md  2026-06-26-LLM配置供应商多模型重构设计.md  2026-06-26-设置系统设计.md  2026-07-01-工具分发Fork-Join重构设计.md  coreschema中新提供一个PostMessage抽象类，用于在某些函数运行时，可以实时向Qt窗口或其他接口发送日志消息或通知消息。在其他的类中放置此类实例的指针，用于实时消息发送。.md
docs/superpowers/plans/: 2026-06-25-Provider实现.md
docs/superpowers/specs/: 2026-06-25-ProviderOpenAI与ProviderClaude实现设计.md  2026-06-29-工具扩展-write_file与bash系列-design.md  2026-06-29-文件内容编码转换-design.md
third/: openssl-README.md
third/nlohmann/detail/: json_pointer.hpp  macro_scope.hpp  macro_unscope.hpp
third/nlohmann/detail/conversions/: from_json.hpp  to_json.hpp
third/nlohmann/detail/output/: serializer.hpp
third/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
third/openssl/libd/: libcrypto.lib  libssl.lib
